<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/dark_dark"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.cengalabs.flatui.views.FlatTextView
            android:id="@+id/welcome_title_app_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="100dip"
            android:layout_marginLeft="5dip"
            android:maxLines="1"
            android:gravity="center"
            android:text="@string/welcome_title_app"
            android:textSize="30sp"
            flatui:fl_textColor="fl_main"
            flatui:fl_theme="@array/grass" />

        <com.cengalabs.flatui.views.FlatTextView
            android:id="@+id/welcome_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="5dip"
            android:maxLines="2"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="20sp"
            flatui:fl_textColor="fl_main"
            flatui:fl_theme="@array/snow" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:focusableInTouchMode="true"
            android:focusable="true">

            <com.cengalabs.flatui.views.FlatEditText
                android:id="@+id/welcome_edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:textColor="@android:color/white"
                android:gravity="center_horizontal"
                android:hint="@string/welcome_hint_sign_up_login"
                android:includeFontPadding="true"
                flatui:fl_fieldStyle="fl_flat"
                flatui:fl_theme="@array/grass" />

            <com.cengalabs.flatui.views.FlatButton
                android:id="@+id/button_welcome_sign_in"
                android:layout_below="@id/welcome_edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/welcome_sign_up_button"
                android:layout_margin="5dp"
                android:onClick="signIn"
                flatui:fl_theme="@array/candy"
                flatui:fl_blockButtonEffectHeight="3dp"
                />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
